--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </style>
 </head>
 <body>
-    <div class="container-fluid img-fluid" style="min-height: 106vh;width: 100%; background-image: url('https://i.pinimg.com/originals/37/7d/89/377d898306494d3328ce5b7f60f5c778.jpg');background-position: center;background-size: cover;">
+ <div class="container-fluid img-fluid" style="min-height: 100vh; background-image: url('https://i.pinimg.com/originals/37/7d/89/377d898306494d3328ce5b7f60f5c778.jpg');background-position: center;background-size: cover;">
         <div class="row">
             <div class="col-md-12">
                 <img id="image" src="./img.png" class="img-fluid"alt="">
