--- a/innerpage.html
+++ b/innerpage.html
@@ -57,14 +57,13 @@
     }
     
     .btn{
-        letter-spacing: 2px;
         font-family: sans-serif;
         font-size: 18px;
         font-weight: 700;
         transition: 0.6s;
     }
     .btn:hover{
-        letter-spacing: 6px;
+        letter-spacing: 2px;
         transition: 0.9s;
         background-color: rgb(25, 165, 25);
         border: 1px solid rgb(25, 165, 25);
@@ -124,7 +123,7 @@
             
         </div>
         <div class="container-fluid" id="name-div" style="display: none;">
-          <h2 id="" class=" fw-bold text-center animate__animated animate__lightSpeedInLeft animate__delay-2s animate__slower" style=" letter-spacing: 1px;color: goldenrod;">HAPPY NEW YEAR</h2>
+          <h2 id="" class=" fw-bold text-center animate__animated animate__lightSpeedInLeft animate__delay-2s animate__slower" style="color: goldenrod; letter-spacing: 1px;color: goldenrod;">HAPPY NEW YEAR</h2>
 
           <h3 id="name" class=" fw-bold text-center animate__animated animate__lightSpeedInLeft animate__delay-2s animate__slower" style=" letter-spacing: 1px;"></h3>
       </div>
